-
Bug
-
Resolution: Fixed
-
Minor
-
None
-
zfs-0.7
3.10.0-1127.18.2.1chaos.ch6.x86_64
lustre-2.12.5_5.llnl-1.ch6.x86_64
-
3
-
9223372036854775807
In console log on the MDS:
Nov 5 09:16:10 zinc1 kernel: LustreError: 16479:0:(osd_object.c:481:osd_check_lma()) lsh-MDT0000: FID-in-LMA [0x200044dd2:0xcbc2:0x0] does not match the object self-fid [0x20003a324:0x8267:0x0]
One FID resolves with fid2path, and a stat of the path returned is successful:
[root@oslic8:~]# lfs fid2path /p/lustre2/ 0x200044dd2:0xcbc2:0x0 /p/lustre2/settgast/GEOSX/src/cmake/blt/tests/internal/src/combine_static_library_test/Foo3.cpp [root@oslic8:~]# stat /p/lustre2/settgast/GEOSX/src/cmake/blt/tests/internal/src/combine_static_library_test/Foo3.cpp File: '/p/lustre2/settgast/GEOSX/src/cmake/blt/tests/internal/src/combine_static_library_test/Foo3.cpp' Size: 445 Blocks: 56 IO Block: 4194304 regular file Device: a2f6a642h/2734073410d Inode: 144119920358116290 Links: 1 Access: (0600/-rw-------) Uid: (56443/settgast) Gid: (56443/settgast) Access: 2020-03-29 21:07:15.000000000 -0700 Modify: 2020-03-29 21:07:16.000000000 -0700 Change: 2020-03-29 21:07:16.000000000 -0700 Birth: -
But the other fid2path hangs:
[root@oslic8:~]# lfs fid2path /p/lustre2/ 0x20003a324:0x8267:0x0 & [1] 53840
The hanging fid2path has this stack:
[root@oslic8:~]# cat /proc/53840/stack [<ffffffffc17b8dd8>] ptlrpc_set_wait+0x4d8/0x800 [ptlrpc] [<ffffffffc17b9183>] ptlrpc_queue_wait+0x83/0x230 [ptlrpc] [<ffffffffc0e8fc99>] mdc_get_info+0x169/0x5c0 [mdc] [<ffffffffc0e96f63>] mdc_iocontrol+0x2313/0x2c50 [mdc] [<ffffffffc0e05b9a>] obd_iocontrol+0x7a/0x350 [lmv] [<ffffffffc0e0dd8a>] lmv_fid2path+0x17a/0x850 [lmv] [<ffffffffc0e0f750>] lmv_iocontrol+0x330/0x1a00 [lmv] [<ffffffffc1138867>] ll_fid2path+0x4a7/0x7a0 [lustre] [<ffffffffc112461b>] ll_dir_ioctl+0x7fb/0x6d80 [lustre] [<ffffffff9fc75800>] do_vfs_ioctl+0x420/0x6d0 [<ffffffff9fc75b51>] SyS_ioctl+0xa1/0xc0 [<ffffffffa01c1112>] system_call_fastpath+0x25/0x2a [<ffffffffffffffff>] 0xffffffffffffffff
We see this on two different file systems (at least). Both were upgraded from Lustre 2.10 to Lustre 2.12 several months ago.
- is related to
-
LU-13124 lfsck check for multiple linked file at OST
-
- Resolved
-